@@ -32,11 +32,10 @@ class Peak_View_Helpers extends Peak_Helpers
      */
     public function __get($name)
     {
-    	$helper = parent::__get($name);
-    	if(!isset($helper->view)) {
-    		$helper->view = Peak_Registry::o()->view;
-    	}
-    	return $helper;
-    }
-    
+        $helper = parent::__get($name);
+        if(!isset($helper->view) && !($helper instanceof Peak_Config)) {
+            $helper->view = Peak_Registry::o()->view;
+        }
+        return $helper;
+    }    
 }
